faster depenency finding

--- a/platformio.ini
+++ b/platformio.ini
@@ -14,7 +14,7 @@ default_envs = ttgo-t-beam-v1_2
 [env]
 platform = espressif32 @ 6.3.1
 framework = arduino
-lib_ldf_mode = deep+
+lib_ldf_mode = chain
 monitor_speed = 115200
 board_build.partitions = huge_app.csv
 monitor_filters = esp32_exception_decoder
