--- a/platformio.ini
+++ b/platformio.ini
@@ -42,6 +42,8 @@ lib_deps =
 	adafruit/Adafruit BMP280 Library @ 2.6.8
 	adafruit/Adafruit BME680 Library @ 2.0.4
 
+build_unflags = -std=gnu++11
+build_flags = -std=gnu++2a
 
 [env:ttgo-t-beam-v1_2]
 extends = env:esp32
