--- a/platformio.ini
+++ b/platformio.ini
@@ -43,7 +43,10 @@ lib_deps =
 	adafruit/Adafruit BME680 Library @ 2.0.4
 
 build_unflags = -std=gnu++11
-build_flags = -std=gnu++2a
+build_flags =
+	-std=gnu++2a
+	-DNOLOG
+	-DGPS_TIMER
 
 [env:ttgo-t-beam-v1_2]
 extends = env:esp32
