--- a/platformio.ini
+++ b/platformio.ini
@@ -42,9 +42,8 @@ lib_deps =
 	adafruit/Adafruit BMP280 Library @ 2.6.8
 	adafruit/Adafruit BME680 Library @ 2.0.4
 
-build_unflags = -std=gnu++11
 build_flags =
-	-std=gnu++2a
+	-std=gnu++20
 	-DNOLOG
 	-DGPS_TIMER
 
@@ -84,12 +83,15 @@ lib_deps =
 [env:ttgo-t-beam-v1_2_SX1262]
 extends = env:esp32
 board = ttgo-t-beam
+build_unflags = -std=gnu++11
 build_flags =
 	-Werror -Wall
 	-DTTGO_T_Beam_V1_2_SX1262
 	-DHAS_SX1262
 	-DHAS_AXP2101
 	-DHAS_BT_CLASSIC
+	-std=gnu++2a
+	-fno-exceptions
 lib_deps =
 	${common.lib_deps}
 	lewisxhe/XPowersLib @ 0.2.4
